force-app/main/default/objects/FAST_Activity_Log__c/FAST_Activity_Log__c.object-meta.xml
<CustomObject>
    <description>Fast Activity Log</description>
    <label>FAST Activity Log</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>FAST Activity Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAST Activity Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>