force-app/main/default/objects/FAST_Activity_Log__c/fields/Activity_log_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_log_Status__c</fullName>
    <description>Activity log Status</description>
    <label>Activity log Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In progress with FAST</fullName>
            </value>
            <value>
                <fullName>In progress with Sales</fullName>
            </value>
            <value>
                <fullName>In progress with VRM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>