force-app/main/default/objects/FAST_Activity_Log__c/fields/Bulk_Pickup_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Pickup_Job_ID__c</fullName>
    <description>Bulk Pickup Job ID(s)</description>
    <label>Bulk Pickup Job ID(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>