force-app/main/default/objects/FAST_Activity_Log__c/fields/Bulk_Pickup_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Pickup_Vendor__c</fullName>
    <description>Bulk Pickup Vendor</description>
    <label>Bulk Pickup Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Got Junk</fullName>
            </value>
            <value>
                <fullName>Check Sammy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>