force-app/main/default/objects/FAST_Activity_Log__c/fields/Case_Issue__c.field-meta.xml
<CustomField>
    <fullName>Case_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case/Issue</description>
    <inlineHelpText>Related Case/Issue record</inlineHelpText>
    <label>Case/Issue</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>FAST Activity Logs</relationshipLabel>
    <relationshipName>FAST_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>