force-app/main/default/objects/FAST_Activity_Log__c/fields/Cleanup_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Cleanup_Scheduled_Date__c</fullName>
    <description>Cleanup Scheduled Date(s)</description>
    <label>Cleanup Scheduled Date(s)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>