force-app/main/default/objects/FAST_Activity_Log__c/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID is Customer code from case client record</description>
    <formula>Case_Issue__r.Client__r.Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue Customer code</inlineHelpText>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>