force-app/main/default/objects/FAST_Activity_Log__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Client Name is Case Client name</description>
    <formula>Case_Issue__r.Client__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue Client name</inlineHelpText>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>