force-app/main/default/objects/FAST_Activity_Log__c/fields/Customer_Facing_Update__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facing_Update__c</fullName>
    <description>Customer Facing Update details</description>
    <label>Customer Facing Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>