force-app/main/default/objects/FAST_Activity_Log__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>Case Date Closed</description>
    <formula>Case_Issue__r.ClosedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue closed date</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>