force-app/main/default/objects/FAST_Activity_Log__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>Date Opened is Case created or date Open</description>
    <formula>Case_Issue__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue open date</inlineHelpText>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>