force-app/main/default/objects/FAST_Activity_Log__c/fields/ETA_Date__c.field-meta.xml
<CustomField>
    <fullName>ETA_Date__c</fullName>
    <description>ETA Date ( Estimated Time of Arrival)</description>
    <label>ETA Date</label>
    <type>Date</type>
</CustomField>