force-app/main/default/objects/FAST_Activity_Log__c/fields/Fast_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Fast_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fast Analyst</description>
    <label>Fast Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FAST_Activity_Log</relationshipName>
    <type>Lookup</type>
</CustomField>