force-app/main/default/objects/FAST_Activity_Log__c/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <description>Implementation Type</description>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Solutions</fullName>
            </value>
            <value>
                <fullName>De-Implementation</fullName>
            </value>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Tier</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>