force-app/main/default/objects/FAST_Activity_Log__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description>Issue Description is case sub type picklist</description>
    <formula>TEXT( Case_Issue__r.Case_Sub_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue Sub Type</inlineHelpText>
    <label>Issue Description</label>
    <type>Text</type>
</CustomField>