force-app/main/default/objects/FAST_Activity_Log__c/fields/Issue_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Issue_Root_Cause__c</fullName>
    <description>Issue Root Cause</description>
    <label>Issue Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launch</fullName>
            </value>
            <value>
                <fullName>Launch Projects Team</fullName>
            </value>
            <value>
                <fullName>Launch FAST Response Team</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Program Management/Sales</fullName>
            </value>
            <value>
                <fullName>National Account Pricing</fullName>
            </value>
            <value>
                <fullName>Customer&apos;s Previous Broker/Management Company</fullName>
            </value>
            <value>
                <fullName>Incumbent/Old Hauler</fullName>
            </value>
            <value>
                <fullName>New Hauler</fullName>
            </value>
            <value>
                <fullName>MAS Service Setup</fullName>
            </value>
            <value>
                <fullName>Vendor Relations</fullName>
            </value>
            <value>
                <fullName>Vendor Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>