force-app/main/default/objects/FAST_Activity_Log__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>Issue Type is case type</description>
    <formula>TEXT( Case_Issue__r.Case_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue Type</inlineHelpText>
    <label>Issue Type</label>
    <type>Text</type>
</CustomField>