force-app/main/default/objects/FAST_Activity_Log__c/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <description>Location ID is case Location Code</description>
    <formula>Case_Issue__r.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue Location Code</inlineHelpText>
    <label>Location ID</label>
    <type>Text</type>
</CustomField>