force-app/main/default/objects/FAST_Activity_Log__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>Location Name is Case Location account name</description>
    <formula>Case_Issue__r.Location__r.Customer_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue Location name</inlineHelpText>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>