force-app/main/default/objects/FAST_Activity_Log__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <description>Material Type</description>
    <inlineHelpText>Trash, Unknown, Recycling, Cardboard, Mixed Recyclables, Single Stream Recycling</inlineHelpText>
    <label>Material Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>