force-app/main/default/objects/FAST_Activity_Log__c/fields/New_Hauler__c.field-meta.xml
<CustomField>
    <fullName>New_Hauler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Hauler</description>
    <label>New Hauler</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please check the selected Hauler record does not exist or does not match!</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FAST Activity Logs</relationshipLabel>
    <relationshipName>FAST_Activity_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>