force-app/main/default/objects/FAST_Activity_Log__c/fields/Portal_Request__c.field-meta.xml
<CustomField>
    <fullName>Portal_Request__c</fullName>
    <description>Portal Request</description>
    <label>Portal Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEST</fullName>
            </value>
            <value>
                <fullName>Service Now</fullName>
            </value>
            <value>
                <fullName>Tango</fullName>
            </value>
            <value>
                <fullName>Coupa</fullName>
            </value>
            <value>
                <fullName>FMPilot</fullName>
            </value>
            <value>
                <fullName>Corrigo</fullName>
            </value>
            <value>
                <fullName>FEXA</fullName>
            </value>
            <value>
                <fullName>Verisae</fullName>
            </value>
            <value>
                <fullName>Basecamp</fullName>
            </value>
            <value>
                <fullName>Building Engines</fullName>
            </value>
            <value>
                <fullName>VAWS</fullName>
            </value>
            <value>
                <fullName>RAMP</fullName>
            </value>
            <value>
                <fullName>Service Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>