force-app/main/default/objects/FAST_Activity_Log__c/fields/Portal_WO_Number_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Portal_WO_Number_if_applicable__c</fullName>
    <description>Portal WO Number (if applicable)</description>
    <label>Portal WO Number (if applicable)</label>
    <type>TextArea</type>
</CustomField>