force-app/main/default/objects/FAST_Activity_Log__c/fields/Previous_Hauler__c.field-meta.xml
<CustomField>
    <fullName>Previous_Hauler__c</fullName>
    <description>Previous Hauler</description>
    <label>Previous Hauler</label>
    <length>100</length>
    <type>Text</type>
</CustomField>