force-app/main/default/objects/FAST_Activity_Log__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Resolution</description>
    <label>Resolution</label>
    <type>TextArea</type>
</CustomField>