force-app/main/default/objects/FAST_Activity_Log__c/fields/Revert__c.field-meta.xml
<CustomField>
    <fullName>Revert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Revert</description>
    <label>Revert</label>
    <type>Checkbox</type>
</CustomField>