force-app/main/default/objects/FAST_Activity_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status is Case status.</description>
    <formula>TEXT(Case_Issue__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue status</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>