force-app/main/default/objects/FAST_Activity_Log__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <description>Ticket # is case tracking number</description>
    <formula>Case_Issue__r.Tracking_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case/Issue Tracking number</inlineHelpText>
    <label>Ticket #</label>
    <type>Text</type>
</CustomField>