force-app/main/default/objects/FAST_Activity_Log__c/fields/Transitioned_to_Fast_Month__c.field-meta.xml
<CustomField>
    <fullName>Transitioned_to_Fast_Month__c</fullName>
    <description>Transitioned to Fast Month: Date (Month/Year)</description>
    <inlineHelpText>Date (Month/Year)</inlineHelpText>
    <label>Transitioned to Fast Month</label>
    <length>100</length>
    <type>Text</type>
</CustomField>