force-app/main/default/objects/FAST_Activity_Log__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <description>Urgency: High, Standard, Medium</description>
    <inlineHelpText>High, Standard, Medium</inlineHelpText>
    <label>Urgency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>