force-app/main/default/objects/FAST_Activity_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity_log_Status__c</columns>
    <columns>Urgency__c</columns>
    <columns>Implementation_Type__c</columns>
    <columns>Issue_Description__c</columns>
    <columns>Location_Name__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Issue_Root_Cause__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>ETA_Date__c</columns>
    <columns>Date_Opened__c</columns>
    <columns>Date_Closed__c</columns>
    <columns>Fast_Analyst__c</columns>
    <columns>Material_Type__c</columns>
    <columns>Previous_Hauler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>